hphp/test/zend/good/ext-date/bug38229.php
<?php
date_default_timezone_set("GMT");
echo date("Y-m", strtotime('2006-1'))."\n";
echo date("Y-m", strtotime('2006-03'))."\n";
echo date("Y-m", strtotime('2006-12'))."\n";
?>