hphp/test/zend/bad/ext/standard/tests/filters/filter_errors_convert_base64_decode.php
<?php
require 'filter_errors.inc';
filter_errors_test('convert.base64-decode', '===');
?>